force-app/main/default/objects/ecosystems_svcs__YearlyFinancial__c/ecosystems_svcs__YearlyFinancial__c.object-meta.xml
<CustomObject>
    <label>Yearly Financial</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yearly Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>