force-app/main/default/objects/ecosystems_svcs__YearlyFinancial__c/fields/ecosystems_svcs__total__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__total__c</fullName>
    <description>Sum of all year values</description>
    <formula>ecosystems_svcs__year1__c  +  ecosystems_svcs__year2__c  +  ecosystems_svcs__year3__c  +  ecosystems_svcs__year4__c  +  ecosystems_svcs__year5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>