force-app/main/default/objects/ecosystems_svcs__YearlyFinancial__c/fields/ecosystems_svcs__year1__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__year1__c</fullName>
    <label>Year 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>